using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public static class ZombieStringReferences
{
    public static string HuntingGoal = "Player";

    //AI blackboard
    public static string PlayerSeen = "player_seen";
    public static string PlayerHeard = "player_heard";
    //Animator
    public static string Dying = "dying";
    public static string Idle="idle";
    public static string Attack = "attack";
    public static string Bite2 = "byte2";
    public static string Death = "death";
    public static string Walk = "walk";
    public static string Scream = "scream";
    public static string Run = "run";
    public static string Bite1 = "bite1";
    public static string CrawlRunning = "crawl_running";
    public static string Crawl = "crawl";
    public static string BiteNeck = "bite_neck";
}
